# CI-demo

./: README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
src/newf/: __init__.py
